  - Everything is ifdef'd, and EXTCMODE is disabled by default in config.h
  - It will send CHANMODES= in the PROTOCTL message on server link, this enables
    servers and services to see which modes are supported and of what type
    they are (1-parameter, paramless, etc).
  And now the bad part:
  - The system has not been fully tested, it will contain bugs (for example I'm
    aware of some memory leaks).
  - A few features are missing: warning/error on linking if chanmodes mismatch, unloading
    of channel modes (not planned soon), 005 broadcasts on change and maybe more..
  - The function (and maybe variable) names will be changed in the next weeks/months
  - You should be carefull with parameter modes + services. Things will get desynced
    if services don't recognize it's a parameter mode. This also applies to clients
    without 005 CHANMODES= support.
  - No documentation

  I really suggest module coders to wait a few weeks till the system is ready..
  In the meantime, don't report bugs or ask for support on this.
- Fixed bug with SWHOIS: oper::swhois wasn't broadcasted correctly which made it
  only show up in local (or server) /whois, reported by format (#0001141).
- minor m_kick tweak.
- Fixed bug in /silence regarding cloaked hosts, reported by kuwatog (#0001157).
- Fixed a problem with a Sleep call on win32
- Rewrote the /stats system. The new system allows for long flags for example
  /stats gline to list glines rather than just /stats G (old flags are still
  supported). Additionally, for glines an extended syntax is now supported allowing
  more refined searches. /stats G +m *@*.aol.com lists only glines that match that 
  mask. For more info do /stats ?. 
- Added stats flags for except throttle and ban version blocks
- stats bugfixes: a null pointer crash and a '/stats k' bug.
- Fixed a couple of problems in the new stats system
- Fixed another stats problem, reported by Angrywolf (#0001163)